--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: Kyle Schultz
-email:
+email: kylews@uw.edu
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
@@ -58,34 +58,21 @@ plugins:
   - jekyll-include-cache
 
 author:
-  name   : "Kyle Schultz"
-  avatar : "/assets/images/bio-photo.png"
-  bio    : "My awesome biography constrained to a sentence or two goes here."
+  name             : "Kyle Schultz"
+  avatar           : "/assets/images/bio-photo.png"
+  bio              : "Mechanical Engieering PhD student at University of Washington focusing on robotics and control"
+  location         : "Seattle, WA"
+  email            : "kylews@uw.edu"
   links:
-    - label: "Website"
-      icon: "fas fa-fw fa-link"
-      url: "https://"
-    - label: "Twitter"
-      icon: "fab fa-fw fa-twitter-square"
-      url: "https://twitter.com/"
+    - label: "LinkedIn"
+      icon: "fab fa-fw fa-linkedin"
+      url: https://www.linkedin.com/in/kyle-w-schultz/
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      url: "https://github.com/"
-    - label: "Instagram"
-      icon: "fab fa-fw fa-instagram"
-      url: "https://instagram.com/"
-
-footer:
-  links:
-    - label: "Twitter"
-      icon: "fab fa-fw fa-twitter-square"
-      url: "https://twitter.com/"
-    - label: "GitHub"
-      icon: "fab fa-fw fa-github"
-      url: "https://github.com/"
-    - label: "Instagram"
-      icon: "fab fa-fw fa-instagram"
-      url: "https://instagram.com/"
+      url: https://github.com/SchultzKyle
+    - label: "Google Scholar"
+      icon: "fab fa-fw fa-scholar"
+      url: https://scholar.google.com/citations?hl=en&user=5dPjODwAAAAJ
 
 defaults:
   # _posts
