--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,5 +6,5 @@ main:
     url: /projects/
   - title: "CV"
     url: /cv/
-  - title: "Personal"
-    url: /personal/
+  - title: "Misc"
+    url: /misc/
